<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mdc"
        android:textSize="25dp"
        android:textColor="@color/red"
        android:id="@+id/mdcText" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:id="@+id/logout"
        android:onClick="logoutApp"
        android:layout_toRightOf="@id/mdcText"
        android:layout_alignParentRight="true"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logout"
        android:id="@+id/rGroup"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">


        <RadioButton
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:id="@+id/priceRadio"
            android:checked="true"
            android:textColor="@color/blue"
            android:onClick="changeInputType"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Code"
            android:id="@+id/codeRadio"
            android:textColor="@color/blue"
            android:onClick="changeInputType"/>

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pText"
        android:layout_below="@id/rGroup"
        android:textSize="15dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/blue"
        android:id="@+id/priceCalText"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/price"
        android:textColor="@color/blue"
        android:layout_below="@+id/rGroup"
        android:layout_toRightOf="@id/priceCalText"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:enabled="true"
        android:gravity="center" />


    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calculate"
        android:id="@+id/caliculate"
        android:onClick="generateCode"
        android:layout_below="@+id/price"
        android:layout_alignParentRight="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Price Info..."
        android:textSize="15dp"
        android:id="@+id/finalPrice"
        android:textColor="@color/red"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/caliculate"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>